Instant Address Standard/main/default/objects/Contact/fields/CarrierRouteOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>CarrierRouteOtherAddress__c</fullName>
    <label>Other Address Carrier Route</label>
    <length>10</length>
    <type>Text</type>
</CustomField>