Instant Address Standard/main/default/objects/Contact/fields/ChangeFlagsOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>ChangeFlagsOtherAddress__c</fullName>
    <label>Other Address Change Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>