Instant Address Standard/main/default/objects/Contact/fields/CountyIdOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>CountyIdOtherAddress__c</fullName>
    <label>Other Address County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>