Instant Address Standard/main/default/objects/Contact/fields/CountyNameOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>CountyNameOtherAddress__c</fullName>
    <label>Other Address County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>