Instant Address Standard/main/default/objects/Contact/fields/Current_Mailing_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Current_Mailing_SummaryFlags__c</fullName>
    <label>Current Mailing SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>