Instant Address Standard/main/default/objects/Contact/fields/Current_Mailing_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Current_Mailing_UITooltip__c</fullName>
    <label>Current Mailing UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>