Instant Address Standard/main/default/objects/Contact/fields/DeliveryPointCheckDigitOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointCheckDigitOtherAddress__c</fullName>
    <label>Other Address Delivery Point Check Digit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>