Instant Address Standard/main/default/objects/Contact/fields/DeliveryPointCodeOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointCodeOtherAddress__c</fullName>
    <label>Other Address Delivery Point Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>