Instant Address Standard/main/default/objects/Contact/fields/DeliveryPointValidationFlagOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointValidationFlagOtherAddress__c</fullName>
    <label>Other Address Delivery Point Validation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>