Instant Address Standard/main/default/objects/Contact/fields/DeliveryPointValidationOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPointValidationOtherAddress__c</fullName>
    <label>Other Address Delivery Point Validation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>