Instant Address Standard/main/default/objects/Contact/fields/FIPSOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>FIPSOtherAddress__c</fullName>
    <label>Other Address FIPS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>