Instant Address Standard/main/default/objects/Contact/fields/LongitudeOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>LongitudeOtherAddress__c</fullName>
    <label>Other Address Longitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>