Instant Address Standard/main/default/objects/Contact/fields/MailingAddressChangeFlags__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressChangeFlags__c</fullName>
    <label>Mailing Change Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>