Instant Address Standard/main/default/objects/Contact/fields/MailingAddressDPVFlag__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressDPVFlag__c</fullName>
    <label>Mailing DPV Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>