Instant Address Standard/main/default/objects/Contact/fields/MailingAddressValidationDate__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressValidationDate__c</fullName>
    <label>Mailing Validation Date</label>
    <type>Date</type>
</CustomField>