Instant Address Standard/main/default/objects/Contact/fields/MailingAddressVerificationFlag__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressVerificationFlag__c</fullName>
    <label>Mailing Verification Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>