Instant Address Standard/main/default/objects/Contact/fields/MailingCOUNTYID__c.field-meta.xml
<CustomField>
    <fullName>MailingCOUNTYID__c</fullName>
    <label>Mailing County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>