Instant Address Standard/main/default/objects/Contact/fields/MailingCOUNTYNAME__c.field-meta.xml
<CustomField>
    <fullName>MailingCOUNTYNAME__c</fullName>
    <label>Mailing County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>