Instant Address Standard/main/default/objects/Contact/fields/MailingDeliveryPointValidation__c.field-meta.xml
<CustomField>
    <fullName>MailingDeliveryPointValidation__c</fullName>
    <label>Mailing DPV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>