Instant Address Standard/main/default/objects/Contact/fields/MailingDPC__c.field-meta.xml
<CustomField>
    <fullName>MailingDPC__c</fullName>
    <label>Mailing DPC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>