Instant Address Standard/main/default/objects/Contact/fields/MailingDPCD__c.field-meta.xml
<CustomField>
    <fullName>MailingDPCD__c</fullName>
    <label>Mailing DPCD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>