Instant Address Standard/main/default/objects/Contact/fields/MailingFIPS__c.field-meta.xml
<CustomField>
    <fullName>MailingFIPS__c</fullName>
    <label>Mailing FIPS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>