Instant Address Standard/main/default/objects/Contact/fields/MailingLatitude__c.field-meta.xml
<CustomField>
    <fullName>MailingLatitude__c</fullName>
    <label>Mailing Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>