Instant Address Standard/main/default/objects/Contact/fields/MailingLongitude__c.field-meta.xml
<CustomField>
    <fullName>MailingLongitude__c</fullName>
    <label>Mailing Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>