Instant Address Standard/main/default/objects/Contact/fields/MailingRDI__c.field-meta.xml
<CustomField>
    <fullName>MailingRDI__c</fullName>
    <label>Mailing RDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>