Instant Address Standard/main/default/objects/Contact/fields/MailingResponseFlag__c.field-meta.xml
<CustomField>
    <fullName>MailingResponseFlag__c</fullName>
    <label>Mailing Response Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>