Instant Address Standard/main/default/objects/Contact/fields/Other_Address_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_Latitude__c</fullName>
    <label>Other Address Latitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>