Instant Address Standard/main/default/objects/Contact/fields/Other_Address_SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>Other_Address_SummaryFlags__c</fullName>
    <label>Other Address SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>