Instant Address Standard/main/default/objects/Contact/fields/Othert_Address_UITooltip__c.field-meta.xml
<CustomField>
    <fullName>Othert_Address_UITooltip__c</fullName>
    <label>Othert Address UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>