Instant Address Standard/main/default/objects/Contact/fields/RDIOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>RDIOtherAddress__c</fullName>
    <label>Other Address RDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>