Instant Address Standard/main/default/objects/Contact/fields/ResponseFlagOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>ResponseFlagOtherAddress__c</fullName>
    <label>Other Address Response Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>