Instant Address Standard/main/default/objects/Contact/fields/ValidationDateOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidationDateOtherAddress__c</fullName>
    <label>Other Address Validation Date</label>
    <type>DateTime</type>
</CustomField>