Instant Address Standard/main/default/objects/Contact/fields/VerificationFlagOtherAddress__c.field-meta.xml
<CustomField>
    <fullName>VerificationFlagOtherAddress__c</fullName>
    <label>Other Address Verification Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>